--- a/app/assets/stylesheets/modules/_messages.scss
+++ b/app/assets/stylesheets/modules/_messages.scss
@@ -159,6 +159,9 @@
           position: absolute;
           top: 15px;
           right: 10px;
+          .select-file{
+            display: none;
+          }
         }
       }
 
