--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -20,4 +20,5 @@
           %input{type: "text", class: "input-text", placeholder: "type a message"}
           %label{class: "icon"}
             %i.far.fa-image
+            %input{type: "file", class: "select-file"}
         %input{type: "submit", class: "send", value: "送信"}
