--- a/app/assets/stylesheets/modules/_messages.scss
+++ b/app/assets/stylesheets/modules/_messages.scss
@@ -27,6 +27,10 @@
     .user-name{
       font-size: 16px;
     }
+    a{
+      text-decoration: none;
+      color: #ffffff;
+    }
   }
 
       // サイドバーの下部分
