--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -5,8 +5,13 @@
     .icon
       = link_to new_group_path do
         %i.far.fa-edit
-      = link_to edit_user_path(current_user) do
+      = link_to edit_user_path(current_user.id) do
         %i.fa.fa-cog
   .side-body
-    %p.group-name techcamp
-    %p.message まだメッセージがありません
+    - current_user.groups.each do |group|
+      .Group
+        = link_to group_messages_path(group.id) do
+          .Group-name
+            = group.name 
+          .Group-message  
+            = group.show_last_message
