--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -9,8 +9,8 @@
           = user.name
     .head-right
       = link_to edit_group_path(@group) do
-        %p.edit-btn
-          Edit
+        -# %p.edit-btn
+        Edit
   .main-body
     = render @messages
   .main-foot
